# josiepy

./: .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  LICENSE.md  Pipfile  README.md  conftest.py  mypy.ini  nbdime_config.json  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: ci.yml
.ropeproject/: config.py  globalnames  objectdb
docs/: Makefile
docs/source/: bibliography.bib  conf.py  index.rst  josie.bn.rst  josie.boundary.rst  josie.euler.rst  josie.euler.schemes.rst  josie.fluid.rst  josie.general.rst  josie.general.schemes.diffusive.rst  josie.general.schemes.rst  josie.general.schemes.time.rst  josie.heat.rst  josie.io.rst  josie.io.write.rst  josie.mesh.rst  josie.ns.rst  josie.ns.schemes.rst  josie.plot.rst  josie.rst  josie.scheme.rst  josie.solver.euler.rst  josie.solver.rst  josie.solver.scheme.rst  josie.solver.twophase.rst  josie.twofluid.rst  josie.twophase.rst  modules.rst  zbibliography.rst
examples/: 001_Getting_Started.ipynb  002_Advection.ipynb  003_Euler_Jet.ipynb  004_Two-phase-sigma.ipynb  Advection.ipynb  Euler Jet.ipynb  Getting Started.ipynb  Pressureless gas dynamics singular solution and the small-hat probelm.ipynb  README.md  pgd-small-hat.ipynb  pgd-small-hat.ipynb.fixme
examples/.ipynb_checkpoints/: Pressureless gas dynamics singular solution and the small-hat probelm-checkpoint.ipynb
examples/config/: nbconvert_config.py
examples/tools/: filter.py  python.tpl
josie/: _dim.py  bc.py  data.py  dimension.py  exceptions.py  fields.py  geom.py  geometry.py  math.py  mesh.py  nbconvert.py  ode.py  problem.py  solver.py  state.py  tfi.py  transport.py
josie/FourEq/: __init__.py  eos.py  exact.py  problem.py  schemes.py  solver.py  state.py
josie/advection/: problem.py  schemes.py  state.py
josie/bn/: closure.py  eos.py  problem.py  schemes.py  solver.py  state.py
josie/boundary/: __init__.py  boundary.py  set.py
josie/euler/: eos.py  exact.py  fields.py  problem.py  schemes.py  solver.py  state.py
josie/fluid/: __init__.py  fields.py  problem.py  state.py
josie/frac_mom/: fields.py  problem.py  solver.py  state.py
josie/heat/: problem.py  schemes.py  solver.py  state.py  transport.py
josie/mesh/: __init__.py  cell.py  cellset.py  mesh.py
josie/ns/: bc.py  eos.py  fields.py  problem.py  scheme.py  solver.py  state.py  transport.py
josie/pgd/: fields.py  problem.py  solver.py  state.py
josie/plot/: __init__.py  backend.py  matplotlib.py
josie/scheme/: __init__.py  convective.py  diffusive.py  gradient.py  nonconservative.py  scheme.py  source.py  time.py
josie/solver/: __init__.py  fields.py  neighbour.py  problem.py  scheme.py  solver.py  state.py
josie/ts_cap/: __init__.py  arithmetic.py  bc.py  (+5 more)
tests/: .one-conftest.py  .two-conftest.py  conftest.py  test_DGcell.py  test_bc.py  test_boundary.py  test_cell.py  test_examples.py  test_fields.py  test_geom.py  test_gradient.py  test_mesh.py  test_solver.py  test_state.py
(+171 files in other folders)
