[tool.poetry]
name = "josiepy"
packages = [
    {include = "josie"}
]
version = "0.9.0"
description = "A 2D PDE solver written in Python without compromising (too much) performance"
authors = ["Ruben Di Battista <rubendibattista@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
aenum = "^3.1.0"
numpy = "^1.20.1"
scipy = "^1.7.0"
matplotlib = "^3.4.2"
meshio = {extras = ["all"], version = "^4.4.6"}
jupyter = {version = "^1.0.0", optional = true}
ipywidgets = {version = "^7.6.3", optional = true}
ipyevents = {version = "^2.0.1", optional = true}
RISE = {version = "^5.7.1", optional = true}
markupsafe = "2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3"
mccabe = "<0.7"
invoke = "^1.6.0"
mypy = "<0.991"
nbconvert = ">=6.0.0"
jsonschema = "3.2.0"
Jinja2 = "<3"
nbdime = "^3.1.0"
pygount = "^1.2.4"
pytest = "^6.2.4"
pytest-benchmark = "^3.4.1"
pytest-flake8 = "^1.0.7"
pytest-mock = "^3.6.1"
pytest-mypy = "^0.8.1"
pytest-xdist = "^2.3.0"
Sphinx = "^4.1.1"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-markdown-tables = "^0.0.15"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-bibtex = "^2.3.0"
pytest-profiling = "^1.7.0"
commonmark = { path = "./vendor/commonmark.py" }
recommonmark = { path = "./vendor/recommonmark" }
pytest-cov = "^2.12.1"
ipdb = "^0.13.9"

[tool.poetry.extras]
jupyter = ["jupyter", "ipywidgets", "ipywidgets", "RISE"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
